[package]
name = "rust-wasm-sample"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive"] }
wit-bindgen-rt = { version = "0.34.0", features = ["bitflags"] }

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:rust-wasm-sample"

[package.metadata.component.dependencies]
